--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
      <!-- Include the navigation bar -->
-    <object data="./navbar/navbar.html" type="text/html"></object>
+    <div class="navbar">
+        <object data="./navbar/navbar.html" type="text/html"></object>
+    </div>
     <!-- TABLE -->
     <table class="mainButtons">
         <tr>
